# user-service

./: Docker-compose.yaml  Dockerfile  pyproject.toml
migrations/: env.py
migrations/versions/: 093850bbf92f_добавление_ролей.py  52a972779627_.py
src/: CRUD.py  Core.py  database.py  exceptions.py  main.py  models.py  router.py  settings.py  shemas.py
src/api/: user_router.py
src/services/: auth.py  create.py  dependencies.py  jwt_.py  psw_.py  update.py  user_info.py
