[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["molodost-vnutri <90547216+molodost-vnutri@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.31"
fastapi = "^0.112.0"
pydantic-settings = "^2.4.0"
PyJWT = "^2.9.0"
alembic = "^1.13.2"
uvicorn = "^0.30.5"
asyncpg = "^0.29.0"
pika = "^1.3.2"
email-validator = "^2.2.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"